# resolve-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  dispatch_carousel_classifier.py  pyproject.toml  setup.ps1  setup.sh
.claude/: settings.json
.codex-sync/: .gitignore  claude-policy.md  codex-kickoff.md  iter-01-claude-brief.md  manifest.json  plan.md  rubric.md
assets/: catalog.json
audio-checks/: v6_repetitions_initial.json
claude-config/: INSTALL.md  Teo Speech Style.md  global-CLAUDE.md
config/: edit_flow_profiles.json  orchestrator_workflows.json
docs/: brock_misty_cut_lessons.md  cut_review_process.md  edit_flow_gui.md  edit_flow_llm_instructions.md  mewtwo_cut_review_handoff.md  next_editing_machine_handoff.md  orchestrator_gui.md  rival-battle-locations.md
scratch/: add_fusion_clip.py  build_finished_roxanne_timeline.py  bulk_replace.py  check_logo_alpha.py  check_projects.py  check_tools_post_execute.py  debug_lua_chunk.py  debug_lua_failure.py  fusion_build_step1_bg.py  fusion_build_step2_logo.py  fusion_build_step3_rotation.py  fusion_build_step3_v2.py  gen_logoflip_assets.py  inspect_clip_comp_state.py  probe_3d_attrs.py  probe_cam_renderer.py  probe_fusion_access.py  probe_fusion_tools.py  probe_lua_animate.py  probe_paste_and_animate.py  recover_and_probe.py  repair_finished_roxanne_a2_tail.py  rse_minimum_battles_orchestrator_update_plan.md  setup_fusion_test_timeline.py  test_execute.py  test_full_lua_chunk.py  test_lua_anim.py  test_tintensity.py  trim_and_probe_comp.py
scripts/: _audio_tools.py  _audit_state.py  _cuda_dlls.py  _resolve_env.py  analyze_bgm_audio.py  analyze_false_starts.py  apply_approved_source_cuts_to_timeline.py  apply_audio_fades.py  apply_cut_review_decisions_native.py  apply_cuts_to_fcpxml.py  apply_fairlight_preset.py  apply_hold_regions_to_fcpxml.py  apply_recap_holds_to_fcpxml.py  apply_record_cuts_to_timeline.py  apply_victreebel_approved_cuts.py  (+105 more)
(+247 files in other folders)
