[project]
name = "resolve-mcp"
version = "0.1.0"
description = "DaVinci Resolve Studio integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.3.0",
    # macOS: target the Resolve window for screenshots
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    # Windows: window detection and screenshot capture
    "pywin32>=306; sys_platform == 'win32'",
    "Pillow>=10.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Cross-platform transcription via faster-whisper (GPU preferred, CPU fallback)
transcription = [
    "faster-whisper>=1.0.0",
]
# Audio feature extraction for BGM tagging (BPM/onset/spectral analysis).
# Used by scripts/analyze_bgm_audio.py. Pulls in numba+scipy+scikit-learn.
audio-analysis = [
    "librosa>=0.10",
]
# Windows CUDA DLLs for GPU transcription — required on Windows, not needed on Linux.
# CTranslate2 (faster-whisper backend) needs cuBLAS and cuDNN at runtime but they are
# not bundled on Windows. Install with: uv sync --extra transcription --extra cuda-win
cuda-win = [
    "nvidia-cublas-cu12>=12.0",
    "nvidia-cudnn-cu12>=9.0",
]
gui-build = [
    "pyinstaller>=6.0",
]

[project.scripts]
resolve-mcp = "resolve_mcp.server:main"
resolve-orchestrator-gui = "resolve_mcp.orchestrator_app:main"
resolve-orchestrator = "resolve_mcp.orchestrator_cli:main"

[tool.uv]
# Keep the transcription stack on the range this pipeline was validated with.
# This range has Python 3.13 wheels and avoids unplanned runtime churn.
override-dependencies = [
    "onnxruntime>=1.14.0,<1.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
